tests/integration/compose.yaml
services:
  envoy:
    image: envoyproxy/envoy:v1.39.1
    ports:
      - "10000:10000"
    extra_hosts:
      - "host.docker.internal:host-gateway"
    command: --config-path /etc/envoy/envoy.yaml --file-flush-interval-msec 0 --file-flush-min-size-kb 0
    volumes:
      - ./envoy.yaml:/etc/envoy/envoy.yaml
